tenants/apps/example/base/middleware-oauth2-proxy-errors.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-errors
spec:
  errors:
    status:
      - "401-403"
    service:
      name: oauth2-proxy
      port: 80
    query: /oauth2/sign_in?rd={url}
