tenants/apps/example/base/service-oauth2-proxy-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy
  labels:
    platform.swhurl.com/managed: "true"
spec:
  type: ExternalName
  externalName: oauth2-proxy.ingress.svc.cluster.local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
