tenants/apps/example/base/ingress-hello-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-web
  namespace: apps-staging
  labels:
    app.kubernetes.io/name: hello-web
    app.kubernetes.io/instance: hello-web
    platform.swhurl.com/managed: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - staging-hello.homelab.swhurl.com
      secretName: hello-web-tls
  rules:
    - host: staging-hello.homelab.swhurl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-web
                port:
                  number: 80
