tenants/apps/example/base/ciliumnetworkpolicy-hello-web-l7-observe.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hello-web-l7-observe
  namespace: apps-staging
  labels:
    platform.swhurl.com/managed: "true"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hello-web
      app.kubernetes.io/instance: hello-web
  ingress:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
          rules:
            http:
              - {}
